# ext-integration

./: .gitignore  Cargo.toml
migrations/2025-03-15-114008_create_salla_webhooks_table/: down.sql  up.sql
migrations/2025-04-08-165222_create_integrated_stores_table/: down.sql  up.sql
migrations/2025-04-08-165717_create_integration_platforms_table/: down.sql  up.sql
migrations/2025-04-08-171236_create_platform_groups_table/: down.sql  up.sql
migrations/2025-04-08-171717_create_carriers_table/: down.sql  up.sql
migrations/2025-04-15-172536_create_temp_stores_integrations_table/: down.sql  up.sql
migrations/2025-04-15-172813_create_users_table/: up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: cache.rs  mod.rs
src/errors/: app_error.rs
src/events/: mod.rs  shipment_creating.rs  store_authorize.rs
src/handlers/: mod.rs  order_handler.rs  salla_handler.rs
src/helpers/: mod.rs  salla_operations.rs
src/loggers/: config.toml  setup.rs
src/middlewares/: mod.rs  salla_webhook_secret.rs
src/models/: integrated_store_model.rs  integration_platform.rs  mod.rs  salla_model.rs  temp_store_integration.rs  user_model.rs
src/observers/: mod.rs  salla_observer.rs
src/req_mappers/: mod.rs  salla_request_mapper.rs
src/routes/: integrations.rs
src/tasks/: daily_tasks.rs  mod.rs
src/utilities/: cache.rs  database.rs
