[package]
name = "ext-integration"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
diesel = { version = "2.2.7", features = [
    "r2d2",
    "postgres",
    "64-column-tables",
    "serde_json",
    "chrono",
] }
env_logger = "0.11.6"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
futures = "0.3.31"
log = "0.4.26"
futures-util = "0.3.31"
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = "2.0.1"
fern = "0.7.1"
lazy_static = "1.5.0"
toml = "0.8.20"
tokio = { version = "1.44.1", features = ["full"] }
cached = { version = "0.55.1", features = ["async"] }
reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1.88"
